--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # zsh shpec build draft
-language: zsh # not sure works
-env: # PUT ENV VAR
+language: zsh
+env:
+  - SHELL=zsh
 install:
   # install antigen
   - curl -L https://raw.githubusercontent.com/zsh-users/antigen/master/antigen.zsh > antigen.zsh
@@ -9,3 +10,12 @@ install:
 script:
   # Check if shall not load diraction by hand
   - shpec
+
+before_install:
+  if ! type $SHELL > /dev/null; then
+    sudo apt-get update -qq &&
+    sudo apt-get install -y $SHELL
+  fi
+
+notifications:
+  email: false
