--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 before_install:
   if ! type $SHELL > /dev/null; then
     sudo apt-get update -qq &&
-    sudo apt-get install -y $SHELL
+    sudo apt-get install -y $SHELL ;
   fi
 
 notifications:
