--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ install:
   - source antigen.zsh
   - antigen bundle rylnd/shpec
 script:
-  # Check if shall not load diraction by hand
+  - zsh --version
+    # Check if shall not load diraction by hand
+  - shpec --version
   - shpec
 
 before_install:
-  if ! type $SHELL > /dev/null; then
-    sudo apt-get update -qq &&
-    sudo apt-get install -y $SHELL ;
-  fi
+  - sudo apt-get install zsh
+  - export SHELL=zsh
 
 notifications:
   email: false
