--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
 install:
   # install antigen
   - curl -L https://raw.githubusercontent.com/zsh-users/antigen/master/antigen.zsh > ~/antigen.zsh
-  - echo "source ~/antigen.zsh\n antigen bundle rylnd/shpec" > ~/.zshrc
+  - echo "source ~/antigen.zsh; antigen bundle rylnd/shpec; antigen apply" > ~/.zshrc
 script:
   - zsh --version
     # Check if shall not load diraction by hand
