test: update antigen endpoint

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,9 @@ before_install:
 
 install:
   # install antigen
-  - curl -L https://raw.githubusercontent.com/zsh-users/antigen/master/antigen.zsh > ~/antigen.zsh
+  - curl -L git.io/antigen  > ~/antigen.zsh
   - echo "source ~/antigen.zsh; antigen bundle rylnd/shpec; antigen apply" > ~/.zshrc
-  - echo "setop sh_word_split" > ~/.zshenv
+  - echo "setopt sh_word_split" > ~/.zshenv
   - zsh ~/.zshrc
   - export SHELL=zsh
 script:
