--- a/.travis.yml
+++ b/.travis.yml
@@ -9,22 +9,19 @@ addons:
       - tree
 
 env:
-  global:
-    - ZSH_DIST=$HOME/.zshdist
   matrix:
-    # Use _ZSH_VERSION since if ZSH_VERSION is present, travis cacher thinks it
-    # is running in zsh and tries to use zsh specific functions.
-    - _ZSH_VERSION=5.3.1
-    - _ZSH_VERSION=5.3
-    - _ZSH_VERSION=5.2
-    - _ZSH_VERSION=5.1.1
-    - _ZSH_VERSION=5.0.8
-    - _ZSH_VERSION=5.0.2
+    - ZSH_VERSION=5.3.1
+    - ZSH_VERSION=5.3
+    - ZSH_VERSION=5.2
+    - ZSH_VERSION=5.1.1
+    - ZSH_VERSION=5.0.8
+    - ZSH_VERSION=5.0.2
 
 before_install:
+  - apt-get install zsh
   - curl -L https://zulu.sh/install | zsh && zsh
   - zulu install zvm
-  - zvm use $_ZSH_VERSION
+  - zvm use $ZSH_VERSION
 
 install:
   # install antigen
