test: try to debug the build on 5.0.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
 
 before_install:
   - curl -L https://zulu.sh/install | zsh
-  - zsh -c "source ~/.zshrc; zulu install zvm; zvm use $ZVM_VERSION "
+  - zsh -c "source ~/.zshrc; zulu install zvm; zvm use $ZVM_VERSION ;cat /home/travis/.zvm/log/*"
 
 install:
   # install antigen
