--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - curl -L git.io/antigen  > ~/antigen.zsh
   - cat .travis-zshrc >> ~/.zshrc ; cat ~/.zshrc
   - echo "setopt sh_word_split" >> ~/.zshenv
-  - zsh ~/.zshrc
+  - zsh -v ~/.zshrc
   - export SHELL=zsh
 
 
