--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 install:
   # install antigen
   - curl -L git.io/antigen  > ~/antigen.zsh
-  - cat .travis-zshrc >> ~/.zshrc ; cat ~/.zshrc
+  - cat .travis-zshrc > ~/.zshrc ; cat ~/.zshrc
   - echo "setopt sh_word_split" >> ~/.zshenv
   - zsh -v ~/.zshrc
   - export SHELL=zsh
