test: declare SHELL=zsh earlier

--- a/.travis-zshrc
+++ b/.travis-zshrc
@@ -1,8 +1,8 @@
-zsh --version
+zsh --version; echo $0
+
 source "${ZULU_DIR:-"${ZDOTDIR:-$HOME}/.zulu"}/core/zulu"
 rm -rf ${ZULU_CONFIG_DIR:-"${ZDOTDIR:-$HOME}/.config/zulu"}/theme # §hack
 zulu init
-zsh --version
 
 source ~/antigen.zsh
 
