--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
   - curl -L git.io/antigen  > ~/antigen.zsh
   - cat .travis-zshrc > ~/.zshrc ; cat ~/.zshrc
   - echo "setopt sh_word_split" >> ~/.zshenv
-  - zsh -v ~/.zshrc
+  - zsh ~/.zshrc
 
 script:
   - zsh --version
