--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,12 @@ install:
   - cat .travis-zshrc > ~/.zshrc ; cat ~/.zshrc
   - echo "setopt sh_word_split" >> ~/.zshenv
   - which zsh
-  - $HOME/.zvm/bin/zsh ~/.zshrc
+  - export ZSH=$HOME/.zvm/bin/zsh
+  - $ZSH ~/.zshrc
 
 script:
-  - $HOME/.zvm/bin/zsh --version
-  - ./.travis-run.zsh
+  - $ZSH --version
+  - $ZSH .travis-run.zsh
     # Check if shall not load diraction by hand
 
 notifications:
