--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ env:
     - ZVM_VERSION=5.0.8
     - ZVM_VERSION=5.0.2
 
-cache:
-  directories:
-    - $HOME/.zvm
+#cache:  #§FIXME
+#  directories:
+#    - $HOME/.zvm
 
 before_install:
   - curl -L https://zulu.sh/install | zsh
