test: update zulu host that was broken

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ cache:
 
 before_install:
   - if [[ $(ls "$HOME/.zvm" | wc -l) -eq 0 ]]; then rm -rf "$HOME/.zvm"; fi # hack for caching init
-  - curl -L https://zulu.sh/install | zsh
+  - curl -L https://zulu.molovo.co/install | zsh
   - export SHELL=zsh
   - zsh -c "source ~/.zshrc; zulu install zvm && zvm use $ZVM_VERSION"
 
