--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
   matrix:
     # Use _ZSH_VERSION since if ZSH_VERSION is present, travis cacher thinks it
     # is running in zsh and tries to use zsh specific functions.
+    # see new versions released at http://zsh.sourceforge.net/News/
+    - _ZSH_VERSION=5.8
     - _ZSH_VERSION=5.7.1
     - _ZSH_VERSION=5.6.2
     - _ZSH_VERSION=5.5.1
