--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     name: macOS
     strategy:
       matrix:
-        os: [macos-12, macos-11]
+        os: [macos-12, macos-13, macos-14]
     runs-on: ${{matrix.os}}
     steps:
       - name: Install deps
